--- a/app/update_info.html
+++ b/app/update_info.html
@@ -10,17 +10,18 @@
 </head>
 
 <body>
-	<h1 id="title"><strong>YouTube</strong> Auto Like</h1>
+	<h1 id="title"><strong>YouTube</strong> Auto DisLike</h1>
 	<p>What's new :</p>
 	<ul>
 		<li>Update to new Youtube layout. Thank you <a href="https://github.com/Taknok/youtube-auto-like/issues/68"> NexusDarkshade</a> !</li>
 		<li>Fix changes after new Youtube layout. Thank you <a href="https://github.com/Taknok/youtube-auto-like/issues/72"> JoelleEmmily & Fraeksn (and also Divin1ty666  &  ReiNasc)</a> !</li>
 	</ul>
-	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/Taknok/youtube-auto-like">Github</a>.</p>
+	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/PatrickWaweru/youtube-auto-dislike">Github</a>.</p>
 	<div id="links">
-		Feel free to grab me a beer 😊 <a id="donate-link" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=F8J6T6WHJBRAA" title="Donate" target="_blank">Donate</a>
+		Feel free to grab me a beer 😊 <a id="donate-link" href="https://www.paypal.com/donate/?hosted_button_id=6JPJ7ANG7QS4G" title="Donate" target="_blank">Donate</a>
 	</div>
 	<div id="credits"><div><b>Credits</b></div>
+		<a href="https://github.com/Taknok/youtube-auto-like.git">Taknok</a></br>
 		<a href="https://github.com/austencm/youtube-auto-like">Austencm</a></br>
 		<a href="https://github.com/JKetelaar">JKetelaar</a></br>
 		<a href="https://github.com/Szmyk">Szmyk</a></br>
