Bring to current status

--- a/app/update_info.html
+++ b/app/update_info.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Youtube-Auto-Like</title>
+	<title>Youtube-Auto-DisLike</title>
 	<link rel="icon" type="image/png" href="images/icon-128.png" />
 	<link href="styles/fonts.css" rel="stylesheet" type="text/css">
 	<link href="styles/info.css" rel="stylesheet" type="text/css">
@@ -14,10 +14,8 @@
 	<h4>You can opt out of notification update from option menu !</h4>
 	<p>What's new :</p>
 	<ul>
-		<li>Update to new Youtube class layout. Thank you Fraeksn & MaeharaProjekt</li>
-	</ul>
-	<ul>
-		<li>Subs mobs is working again : update to new youtube hide attribute.</li>
+		<li>Full rework to include new youtube grid version</li>
+		<li>Add russian translation, thank you m_k.</li>
 	</ul>
 	<p>Feel free to report any bug on <a id="report-link" href="https://github.com/PatrickWaweru/youtube-auto-dislike">Github</a>.</p>
 	<div id="links">
